# rr-tests

./: .gitignore  Cargo.toml  README.md  benchmark.py  run_test.sh  test_all.sh  todos.md
component-parser/: Cargo.toml
component-parser/src/: ir.rs  parse.rs
component-parser/src/ir/: index_space.rs  nodes.rs  resolve.rs
crimp-decompose/: Cargo.toml
crimp-decompose/src/: accessor.rs  main.rs
crimp-decompose/src/accessor/: node.rs
crimp-driver/: Cargo.toml
crimp-driver/src/: main.rs
crimp-glue/driver/: Cargo.toml
crimp-glue/driver/src/: lib.rs
crimp-glue/tracereader/: Cargo.toml
crimp-glue/tracereader/src/: convert.rs  lib.rs  types.rs
crimp-tests/: Cargo.toml
crimp-tests/src/: component_macro.rs  replay.rs
decompose-alt/: Cargo.toml  cm-description.md
decompose-alt/src/: accessor.rs  main.rs
decompose-alt/src/accessor/: spaces.rs
decompose-alternative/: Cargo.toml
decompose-alternative/src/: ir.rs  lib.rs  module.rs  parse.rs
decompose-alternative/src/ir/: index_space.rs  nodes.rs  resolve.rs  resolve_new.rs
decomposer/: Cargo.toml
decomposer/src/: ir.rs  parse.rs
decomposer/src/ir/: index_space.rs  resolve.rs
rr/: Cargo.toml  complex.rs  component_macro.rs  core.rs  multi_return.rs  resource-1.rs
rr/common/: mod.rs
rr/imports_core/: mod.rs
rr/src/: component_macro.rs  lib.rs  replay.rs  snapshot.rs
scripts/: .gitignore  benchmark_plotter.py  pmscan.py
snapshot/: Cargo.toml  benchmark.py  benchmark_runner.py  run_pmscan_bench.sh
snapshot/src/: jit.rs  main.rs  pagemap.rs  uffd.rs
src/: complex.rs  component.rs  component_macro.rs  core.rs  hostfn.rs  main.rs  multi_return.rs
src/common/: mod.rs
src/imports_component/: complex.rs
stock/: Cargo.toml  component_macro.rs  core.rs
stock/common/: mod.rs
stock/imports_core/: complex.rs
test-modules/: Makefile  complex-import-component.wat  componentize.sh  core-componentize.sh  double-import.wat  double-internal.wat  multi-export.wat  multi-import.wat
test-modules/core-componentizable/: basic.wat  complex-import.wat  complex-singlereturn-indirect.wat  complex-singlereturn.wat  my-world.wat  single.wat  string-params-cc.wat
test-modules/core-componentizable/wit/: basic.wit  complex-singlereturn.wit  single.wit  string-params-cc.wit
test-modules/core-plain/: complex-exported-memory.wat  complex.wat  single.wat
test-modules/rust-componentizable/complex_params/: Cargo.toml
test-modules/rust-componentizable/complex_params/src/: bindings.rs  lib.rs
test-modules/rust-componentizable/complex_params/wit/: world.wit
test-modules/rust-componentizable/multi_param/: Cargo.toml
test-modules/rust-componentizable/multi_param/src/: bindings.rs
test-modules/rust-componentizable/multi_param/wit/: world.wit
test-modules/rust-componentizable/multi_return/: Cargo.toml
test-modules/rust-componentizable/multi_return/src/: bindings.rs  lib.rs
test-modules/rust-componentizable/multi_return/wit/: world.wit
test-modules/rust-componentizable/potpourri/: Cargo.toml
test-modules/rust-componentizable/potpourri/src/: bindings.rs  lib.rs
test-modules/rust-componentizable/potpourri/wit/: world.wit
test-modules/rust-componentizable/record_large/: Cargo.toml
test-modules/rust-componentizable/record_large/src/: bindings.rs  lib.rs
test-modules/rust-componentizable/record_large/wit/: world.wit
test-modules/rust-componentizable/record_small/: Cargo.toml
test-modules/rust-componentizable/record_small/src/: bindings.rs  lib.rs
test-modules/rust-componentizable/record_small/wit/: world.wit
test-modules/rust-componentizable/variant_large/: Cargo.toml
test-modules/rust-componentizable/variant_large/src/: bindings.rs  lib.rs
test-modules/rust-componentizable/variant_large/wit/: world.wit
test-modules/wasi/: Cargo.toml  compressor.rs
test-modules/wasi/.cargo/: config.toml
test-modules/wit/: complex-import-singlereturn.wit  complex-import.wit  complex-singlereturn.wit  my-world.wit
wasi-modules/: Cargo.toml  Makefile  compressor.rs
