[workspace]
members = [
    "crimp-tests",
    "snapshot",
    "component-parser",
]
resolver = "3"

[workspace.package]
authors = ["Arjun Ramesh <arjunr2@andrew.cmu.edu>"]
version = "0.0.1"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
prime_factorization = "1.0.5"
env_logger = "0.11.8"
anyhow = "1.0.100"
log = "0.4.28"
wasmtime = { path = "../wasmtime-rr-prototyping/crates/wasmtime" }
wasmtime-wasi = { path = "../wasmtime-rr-prototyping/crates/wasi", features = ["default"] }
#wasmtime = { git = "https://github.com/bytecodealliance/wasmtime-rr-prototyping.git", branch = "crimp-dev", features = ["default"] }
#wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime-rr-prototyping.git", branch = "crimp-dev", features = ["default"] }
#wasm-crimp = { git = "https://github.com/bytecodealliance/wasmtime-rr-prototyping.git", branch = "crimp-dev", features = ["std"] }
# For wirm/parsing
wirm = { path = "../wirm" }
#wirm = { git = "https://github.com/composablesys/wirm.git", branch = "feature/support-components" }
wasmprinter = "0.244.0"
wat = "1.244.0"
