[package]
name = "component-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
wirm.workspace = true
wat.workspace = true
wasmprinter.workspace = true
env_logger.workspace = true
log.workspace = true
anyhow.workspace = true
clap.workspace = true
indexmap = "2.13.0"

[[bin]]
name = "crimp-decompose"
path = "src/bin/decompose.rs"
