[package]
name = "component-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
wirm.workspace = true
wat.workspace = true
wasmprinter.workspace = true
env_logger.workspace = true
log.workspace = true
anyhow.workspace = true
clap.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
sha2 = "0.10.9"

[[bin]]
name = "crimp-decompose"
path = "src/bin/decompose/main.rs"
