[package]
name = "crimp-decompose"
edition = "2024"
authors.workspace = true
version.workspace = true

[dependencies]
env_logger.workspace = true
anyhow.workspace = true
clap.workspace = true
log.workspace = true
wasm-crimp.workspace = true
wirm = {path = "../../wirm" }
wat = "1.243.0"
wasmprinter = "0.244.0"
