[package]
name = "decompose-alternative"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmprinter = "0.244"
wat = "1.243.0"
wirm = {path = "../../wirm" }
indexmap = "2"
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "decompose"
path = "src/bin/decompose.rs"
