[package]
name = "wasmtime-rr-tests"
edition = "2024"

[[bin]]
name = "replay"
path = "src/replay.rs"

[[bin]]
name = "snapshot"
path = "src/snapshot.rs"

[dependencies]
anyhow = "1.0.100"
clap.workspace = true
env_logger = "0.11.8"
prime_factorization.workspace = true
wasmtime = { path = "../../wasmtime-rr-prototyping/crates/wasmtime", features = ["default"] }
wasmtime-wasi = { path = "../../wasmtime-rr-prototyping/crates/wasi", features = ["default"] }
rand = "0.8"
rustix = { version = "0.38", features = ["mm"] }
log = "0.4.28"

[features]
rr = ["wasmtime/rr"]
default = ["rr"]
