[package]
name = "wasmtime-rr-tests"
edition = "2024"

[[bin]]
name = "replay"
path = "src/replay.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
prime_factorization.workspace = true
wasmtime = { path = "../../wasmtime-rr-prototyping/crates/wasmtime", features = ["default"] }
wasmtime-wasi = { path = "../../wasmtime-rr-prototyping/crates/wasi", features = ["default"] }

[features]
rr = ["wasmtime/rr"]
default = ["rr"]
