[package]
name = "snapshot"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
rand = "0.8"
log = "0.4.28"
libc = "0.2.177"
rayon = "1.11.0"
bitflags = "2.10.0"
nix = { version = "0.30.1", features = ["ioctl", "mman"] }
rand_distr = "0.4"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
procfs = "0.18.0"
