[package]
name = "wasmtime-stock-tests"
edition = "2024"

[[bin]]
name = "core-stock"
path = "core.rs"

[[bin]]
name = "complex-stock"
path = "complex.rs"

[[bin]]
name = "multi-return-stock"
path = "multi_return.rs"

[dependencies]
clap.workspace = true
prime_factorization.workspace = true
# Stock wasmtime 
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev ="3cbeb24bc828ad0f47dcb3c0cc5f428aa2dc5165", package = "wasmtime" }
